# ProjectPractice

./: README.md
docs/: документация_проекта.md  документация_сайта.md
docs/docs/: отчет_о_взаимодействии_с_партнером.md  отчет_о_технологии.md
reports/: Итоговый_отчет.docx
site/: about.html  index.html  journal.html  resources.html  team.html
site/css/: about.css  index.css  journal.css  resources.css  style.css  team.css
src/: pyproject.toml
